--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.13</version>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.jtds</groupId>
+            <artifactId>jtds</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
